Issue 213: Adding vertical align-items to pagination parent, adding display inherit to pagination next + previous anchors

--- a/src/less/pagination/ds4/pagination.less
+++ b/src/less/pagination/ds4/pagination.less
@@ -4,6 +4,7 @@
 // blocks
 
 .pagination {
+    align-items: center;
     display: flex;
     margin: 8px 0;
 
@@ -25,6 +26,7 @@
 .pagination__next,
 .pagination__previous {
     color: @color-icon-actionable-default;
+    display: inherit;
     padding: 8px 8px 8px 0;
 
     &:visited {
